// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CF Writer Generate HTML5 App Config Generate deployment configs - HTML5 App 1`] = `
Object {
  ".gitignore": Object {
    "contents": "node_modules/
dist/
.scp/
.env
Makefile*.mta
mta_archives
mta-*
resources
archive.zip
.*_mta_build_tmp",
    "state": "modified",
  },
  "package.json": Object {
    "contents": "{
    \\"name\\": \\"basicapp\\",
    \\"version\\": \\"0.0.1\\",
    \\"private\\": true,
    \\"description\\": \\"An SAP Fiori application.\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"openui5\\",
        \\"sapui5\\"
    ],
    \\"main\\": \\"webapp/index.html\\",
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@ui5/cli\\": \\"^3.0.0\\",
        \\"@sap/ux-ui5-tooling\\": \\"1\\",
        \\"rimraf\\": \\"^5.0.5\\",
        \\"mbt\\": \\"^1.2.29\\",
        \\"@sap/ui5-builder-webide-extension\\": \\"^1.1.9\\",
        \\"ui5-task-zipper\\": \\"^3.1.3\\"
    },
    \\"scripts\\": {
        \\"start\\": \\"fiori run --open \\\\\\"test/flpSandbox.html?sap-ui-xx-viewCache=false#basicapp-display\\\\\\"\\",
        \\"start-local\\": \\"fiori run --config ./ui5-local.yaml --open \\\\\\"test/flpSandbox.html?sap-ui-xx-viewCache=false#basicapp-display\\\\\\"\\",
        \\"build\\": \\"ui5 build --config=ui5.yaml --clean-dest --dest dist\\",
        \\"deploy\\": \\"fiori cfDeploy\\",
        \\"deploy-config\\": \\"fiori add deploy-config\\",
        \\"start-noflp\\": \\"fiori run --open \\\\\\"index.html?sap-ui-xx-viewCache=false\\\\\\"\\",
        \\"start-variants-management\\": \\"fiori run --open \\\\\\"preview.html?sap-ui-xx-viewCache=false&fiori-tools-rta-mode=true&sap-ui-rta-skip-flex-validation=true#preview-app\\\\\\"\\",
        \\"unit-tests\\": \\"fiori run --open 'test/unit/unitTests.qunit.html'\\",
        \\"int-tests\\": \\"fiori run --open 'test/integration/opaTests.qunit.html'\\",
        \\"build:cf\\": \\"ui5 build preload --clean-dest --config ui5-deploy.yaml --include-task=generateCachebusterInfo\\",
        \\"build:mta\\": \\"rimraf resources mta_archives && mbt build --mtar archive\\",
        \\"undeploy\\": \\"cf undeploy basicapp --delete-services --delete-service-keys --delete-service-brokers\\"
    },
    \\"sapuxLayer\\": \\"VENDOR\\"
}
",
    "state": "modified",
  },
  "ui5-deploy.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: '2.4'
metadata:
  name: 'basicapp'
type: application
builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: webide-extension-task-updateManifestJson
      afterTask: replaceVersion
      configuration:
        appFolder: webapp
        destDir: dist
    - name: ui5-task-zipper
      afterTask: generateCachebusterInfo
      configuration:
        archiveName: basicapp
        additionalFiles:
          - xs-app.json
",
    "state": "modified",
  },
  "xs-app.json": Object {
    "contents": "{
  \\"welcomeFile\\": \\"/index.html\\",
  \\"authenticationMethod\\": \\"route\\",
  \\"routes\\": [
    {
      \\"source\\": \\"^undefined/(.*)$\\",
      \\"target\\": \\"undefined/$1\\",
      \\"destination\\": \\"ABC123\\",
      \\"authenticationType\\": \\"none\\",
      \\"csrfProtection\\": false
    },
    {
      \\"source\\": \\"^/resources/(.*)$\\",
      \\"target\\": \\"/resources/$1\\",
      \\"authenticationType\\": \\"none\\",
      \\"destination\\": \\"ui5\\"
    },
    {
      \\"source\\": \\"^/test-resources/(.*)$\\",
      \\"target\\": \\"/test-resources/$1\\",
      \\"authenticationType\\": \\"none\\",
      \\"destination\\": \\"ui5\\"
    },
    {
      \\"source\\": \\"^(.*)$\\",
      \\"target\\": \\"$1\\",
      \\"service\\": \\"html5-apps-repo-rt\\",
      \\"authenticationType\\": \\"xsuaa\\"
    }
  ]
}
",
    "state": "modified",
  },
}
`;

exports[`CF Writer Generate HTML5 App Config Generate deployment configs - HTML5 App 2`] = `
"_schema-version: \\"3.2\\"
ID: basicapp
description: Generated by Fiori Tools
version: 0.0.1
modules:
- name: basicapp-app-content
  type: com.sap.application.content
  path: .
  requires:
  - name: basicapp-repo-host
    parameters:
      content-target: true
  build-parameters:
    build-result: resources
    requires:
    - artifacts:
      - basicapp.zip
      name: basicapp
      target-path: resources/
- name: basicapp
  type: html5
  path: .
  build-parameters:
    build-result: dist
    builder: custom
    commands:
    - npm install
    - npm run build:cf
    supported-platforms: []
resources:
- name: basicapp-repo-host
  type: org.cloudfoundry.managed-service
  parameters:
    service: html5-apps-repo
    service-name: basicapp-html5-service
    service-plan: app-host
- name: basicapp-destination-service
  type: org.cloudfoundry.managed-service
  parameters:
    config:
      HTML5Runtime_enabled: false
      init_data:
        instance:
          destinations:
          - Authentication: NoAuthentication
            Name: ui5
            ProxyType: Internet
            Type: HTTP
            URL: https://ui5.sap.com
          existing_destinations_policy: update
      version: 1.0.0
    service: destination
    service-name: basicapp-destination-service
    service-plan: lite
parameters:
  deploy_mode: html5-repo
  enable-parallel-deployments: true
"
`;

exports[`CF Writer Generate HTML5 App Config Generate deployment configs - HTML5 App with managed approuter attached 1`] = `
Object {
  "../basicapp01/.gitignore": Object {
    "contents": "node_modules/
dist/
.scp/
.env
Makefile*.mta
mta_archives
mta-*
resources
archive.zip
.*_mta_build_tmp",
    "state": "modified",
  },
  "../basicapp01/package.json": Object {
    "contents": "{
    \\"name\\": \\"basicapp\\",
    \\"version\\": \\"0.0.1\\",
    \\"private\\": true,
    \\"description\\": \\"An SAP Fiori application.\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"openui5\\",
        \\"sapui5\\"
    ],
    \\"main\\": \\"webapp/index.html\\",
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@ui5/cli\\": \\"^3.0.0\\",
        \\"@sap/ux-ui5-tooling\\": \\"1\\",
        \\"rimraf\\": \\"^5.0.5\\",
        \\"mbt\\": \\"^1.2.29\\",
        \\"@sap/ui5-builder-webide-extension\\": \\"^1.1.9\\",
        \\"ui5-task-zipper\\": \\"^3.1.3\\"
    },
    \\"scripts\\": {
        \\"start\\": \\"fiori run --open \\\\\\"test/flpSandbox.html?sap-ui-xx-viewCache=false#basicapp-display\\\\\\"\\",
        \\"start-local\\": \\"fiori run --config ./ui5-local.yaml --open \\\\\\"test/flpSandbox.html?sap-ui-xx-viewCache=false#basicapp-display\\\\\\"\\",
        \\"build\\": \\"ui5 build --config=ui5.yaml --clean-dest --dest dist\\",
        \\"deploy\\": \\"fiori cfDeploy\\",
        \\"deploy-config\\": \\"fiori add deploy-config\\",
        \\"start-noflp\\": \\"fiori run --open \\\\\\"index.html?sap-ui-xx-viewCache=false\\\\\\"\\",
        \\"start-variants-management\\": \\"fiori run --open \\\\\\"preview.html?sap-ui-xx-viewCache=false&fiori-tools-rta-mode=true&sap-ui-rta-skip-flex-validation=true#preview-app\\\\\\"\\",
        \\"unit-tests\\": \\"fiori run --open 'test/unit/unitTests.qunit.html'\\",
        \\"int-tests\\": \\"fiori run --open 'test/integration/opaTests.qunit.html'\\",
        \\"build:cf\\": \\"ui5 build preload --clean-dest --config ui5-deploy.yaml --include-task=generateCachebusterInfo\\",
        \\"build:mta\\": \\"rimraf resources mta_archives && mbt build --mtar archive\\",
        \\"undeploy\\": \\"cf undeploy basicapp --delete-services --delete-service-keys --delete-service-brokers\\"
    },
    \\"sapuxLayer\\": \\"VENDOR\\"
}
",
    "state": "modified",
  },
  "../basicapp01/ui5-deploy.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: '2.4'
metadata:
  name: 'basicapp'
type: application
builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: webide-extension-task-updateManifestJson
      afterTask: replaceVersion
      configuration:
        appFolder: webapp
        destDir: dist
    - name: ui5-task-zipper
      afterTask: generateCachebusterInfo
      configuration:
        archiveName: basicapp
        additionalFiles:
          - xs-app.json
",
    "state": "modified",
  },
  "../basicapp01/xs-app.json": Object {
    "contents": "{
  \\"welcomeFile\\": \\"/index.html\\",
  \\"authenticationMethod\\": \\"route\\",
  \\"routes\\": [
    {
      \\"source\\": \\"^undefined/(.*)$\\",
      \\"target\\": \\"undefined/$1\\",
      \\"destination\\": \\"ABC123\\",
      \\"authenticationType\\": \\"none\\",
      \\"csrfProtection\\": false
    },
    {
      \\"source\\": \\"^/resources/(.*)$\\",
      \\"target\\": \\"/resources/$1\\",
      \\"authenticationType\\": \\"none\\",
      \\"destination\\": \\"ui5\\"
    },
    {
      \\"source\\": \\"^/test-resources/(.*)$\\",
      \\"target\\": \\"/test-resources/$1\\",
      \\"authenticationType\\": \\"none\\",
      \\"destination\\": \\"ui5\\"
    },
    {
      \\"source\\": \\"^(.*)$\\",
      \\"target\\": \\"$1\\",
      \\"service\\": \\"html5-apps-repo-rt\\",
      \\"authenticationType\\": \\"xsuaa\\"
    }
  ]
}
",
    "state": "modified",
  },
  ".gitignore": Object {
    "contents": "node_modules/
dist/
.scp/
.env
Makefile*.mta
mta_archives
mta-*
resources
archive.zip
.*_mta_build_tmp",
    "state": "modified",
  },
  "package.json": Object {
    "contents": "{
    \\"name\\": \\"lrop\\",
    \\"version\\": \\"0.0.1\\",
    \\"private\\": true,
    \\"description\\": \\"An SAP Fiori application.\\",
    \\"keywords\\": [
        \\"ui5\\",
        \\"openui5\\",
        \\"sapui5\\"
    ],
    \\"main\\": \\"webapp/index.html\\",
    \\"dependencies\\": {},
    \\"devDependencies\\": {
        \\"@ui5/cli\\": \\"^3.0.0\\",
        \\"@sap/ux-ui5-tooling\\": \\"1\\",
        \\"rimraf\\": \\"^5.0.5\\",
        \\"mbt\\": \\"^1.2.29\\",
        \\"@sap/ui5-builder-webide-extension\\": \\"^1.1.9\\",
        \\"ui5-task-zipper\\": \\"^3.1.3\\"
    },
    \\"scripts\\": {
        \\"start\\": \\"fiori run --open \\\\\\"test/flpSandbox.html?sap-ui-xx-viewCache=false#lrop-display\\\\\\"\\",
        \\"start-local\\": \\"fiori run --config ./ui5-local.yaml --open \\\\\\"test/flpSandbox.html?sap-ui-xx-viewCache=false#lrop-display\\\\\\"\\",
        \\"build\\": \\"ui5 build --config=ui5.yaml --clean-dest --dest dist\\",
        \\"deploy\\": \\"fiori cfDeploy\\",
        \\"deploy-config\\": \\"fiori add deploy-config\\",
        \\"start-noflp\\": \\"fiori run --open \\\\\\"index.html?sap-ui-xx-viewCache=false\\\\\\"\\",
        \\"start-variants-management\\": \\"fiori run --open \\\\\\"preview.html?sap-ui-xx-viewCache=false&fiori-tools-rta-mode=true&sap-ui-rta-skip-flex-validation=true#preview-app\\\\\\"\\",
        \\"unit-tests\\": \\"fiori run --open 'test/unit/unitTests.qunit.html'\\",
        \\"int-tests\\": \\"fiori run --open 'test/integration/opaTests.qunit.html'\\",
        \\"build:cf\\": \\"ui5 build preload --clean-dest --config ui5-deploy.yaml --include-task=generateCachebusterInfo\\",
        \\"build:mta\\": \\"rimraf resources mta_archives && mbt build --mtar archive\\",
        \\"undeploy\\": \\"cf undeploy comfioritoolslrop --delete-services --delete-service-keys --delete-service-brokers\\"
    },
    \\"sapuxLayer\\": \\"VENDOR\\"
}
",
    "state": "modified",
  },
  "ui5-deploy.yaml": Object {
    "contents": "# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: '2.4'
metadata:
  name: 'lrop'
type: application
builder:
  resources:
    excludes:
      - /test/**
      - /localService/**
  customTasks:
    - name: webide-extension-task-updateManifestJson
      afterTask: replaceVersion
      configuration:
        appFolder: webapp
        destDir: dist
    - name: ui5-task-zipper
      afterTask: generateCachebusterInfo
      configuration:
        archiveName: comfioritoolslrop
        additionalFiles:
          - xs-app.json
",
    "state": "modified",
  },
  "webapp/manifest.json": Object {
    "contents": "{
  \\"_version\\": \\"1.8.0\\",
  \\"sap.app\\": {
    \\"id\\": \\"com.fiori.tools.lrop\\",
    \\"type\\": \\"application\\",
    \\"i18n\\": \\"i18n/i18n.properties\\",
    \\"applicationVersion\\": {
      \\"version\\": \\"1.0.0\\"
    },
    \\"title\\": \\"{{appTitle}}\\",
    \\"description\\": \\"{{appDescription}}\\",
    \\"tags\\": {
      \\"keywords\\": []
    },
    \\"ach\\": \\"\\",
    \\"resources\\": \\"resources.json\\",
    \\"dataSources\\": {
      \\"mainService\\": {
        \\"uri\\": \\"/sap/opu/odata/sap/ZUI_RAP_TRAVEL_M_U025/\\",
        \\"type\\": \\"OData\\",
        \\"settings\\": {
          \\"annotations\\": [
            \\"ZUI_RAP_TRAVEL_M_U025_VAN\\",
            \\"annotation\\"
          ],
          \\"localUri\\": \\"localService/metadata.xml\\"
        }
      },
      \\"annotation\\": {
        \\"type\\": \\"ODataAnnotation\\",
        \\"uri\\": \\"annotations/annotation.xml\\",
        \\"settings\\": {
          \\"localUri\\": \\"annotations/annotation.xml\\"
        }
      }
    },
    \\"offline\\": false,
    \\"sourceTemplate\\": {
      \\"id\\": \\"ui5template.smartTemplate\\",
      \\"version\\": \\"1.40.12\\"
    }
  },
  \\"sap.ui\\": {
    \\"technology\\": \\"UI5\\",
    \\"icons\\": {
      \\"icon\\": \\"\\",
      \\"favIcon\\": \\"\\",
      \\"phone\\": \\"\\",
      \\"phone@2\\": \\"\\",
      \\"tablet\\": \\"\\",
      \\"tablet@2\\": \\"\\"
    },
    \\"deviceTypes\\": {
      \\"desktop\\": true,
      \\"tablet\\": true,
      \\"phone\\": true
    },
    \\"supportedThemes\\": [
      \\"sap_hcb\\",
      \\"sap_belize\\"
    ]
  },
  \\"sap.ui5\\": {
    \\"resources\\": {
      \\"js\\": [],
      \\"css\\": []
    },
    \\"dependencies\\": {
      \\"minUI5Version\\": \\"1.65.0\\",
      \\"libs\\": {},
      \\"components\\": {}
    },
    \\"models\\": {
      \\"i18n\\": {
        \\"type\\": \\"sap.ui.model.resource.ResourceModel\\",
        \\"uri\\": \\"i18n/i18n.properties\\"
      },
      \\"@i18n\\": {
        \\"type\\": \\"sap.ui.model.resource.ResourceModel\\",
        \\"uri\\": \\"i18n/i18n.properties\\"
      },
      \\"i18n|sap.suite.ui.generic.template.ListReport|Travel\\": {
        \\"type\\": \\"sap.ui.model.resource.ResourceModel\\",
        \\"uri\\": \\"i18n/ListReport/Travel/i18n.properties\\"
      },
      \\"i18n|sap.suite.ui.generic.template.ObjectPage|Travel\\": {
        \\"type\\": \\"sap.ui.model.resource.ResourceModel\\",
        \\"uri\\": \\"i18n/ObjectPage/Travel/i18n.properties\\"
      },
      \\"i18n|sap.suite.ui.generic.template.ObjectPage|Booking\\": {
        \\"type\\": \\"sap.ui.model.resource.ResourceModel\\",
        \\"uri\\": \\"i18n/ObjectPage/Booking/i18n.properties\\"
      },
      \\"\\": {
        \\"dataSource\\": \\"mainService\\",
        \\"preload\\": true,
        \\"settings\\": {
          \\"defaultBindingMode\\": \\"TwoWay\\",
          \\"defaultCountMode\\": \\"Inline\\",
          \\"refreshAfterChange\\": false,
          \\"metadataUrlParams\\": {
            \\"sap-value-list\\": \\"none\\"
          }
        }
      }
    },
    \\"extends\\": {
      \\"extensions\\": {}
    },
    \\"contentDensities\\": {
      \\"compact\\": true,
      \\"cozy\\": true
    }
  },
  \\"sap.ui.generic.app\\": {
    \\"_version\\": \\"1.3.0\\",
    \\"settings\\": {
      \\"forceGlobalRefresh\\": false,
      \\"objectPageHeaderType\\": \\"Dynamic\\",
      \\"showDraftToggle\\": false
    },
    \\"pages\\": {
      \\"ListReport|Travel\\": {
        \\"entitySet\\": \\"Travel\\",
        \\"component\\": {
          \\"name\\": \\"sap.suite.ui.generic.template.ListReport\\",
          \\"list\\": true,
          \\"settings\\": {
            \\"condensedTableLayout\\": true,
            \\"smartVariantManagement\\": true,
            \\"enableTableFilterInPageVariant\\": true
          }
        },
        \\"pages\\": {
          \\"ObjectPage|Travel\\": {
            \\"entitySet\\": \\"Travel\\",
            \\"component\\": {
              \\"name\\": \\"sap.suite.ui.generic.template.ObjectPage\\"
            },
            \\"pages\\": {
              \\"ObjectPage|to_Booking\\": {
                \\"navigationProperty\\": \\"to_Booking\\",
                \\"entitySet\\": \\"Booking\\",
                \\"component\\": {
                  \\"name\\": \\"sap.suite.ui.generic.template.ObjectPage\\"
                }
              }
            }
          }
        }
      }
    }
  },
  \\"sap.platform.abap\\": {
    \\"uri\\": \\"\\"
  },
  \\"sap.fiori\\": {
    \\"registrationIds\\": [],
    \\"archeType\\": \\"transactional\\"
  },
  \\"sap.platform.hcp\\": {
    \\"uri\\": \\"\\"
  },
  \\"sap.cloud\\": {
    \\"public\\": true,
    \\"service\\": \\"comfioritoolslrop\\"
  }
}
",
    "state": "modified",
  },
  "xs-app.json": Object {
    "contents": "{
  \\"welcomeFile\\": \\"/index.html\\",
  \\"authenticationMethod\\": \\"route\\",
  \\"routes\\": [
    {
      \\"source\\": \\"^/sap/(.*)$\\",
      \\"target\\": \\"/sap/$1\\",
      \\"destination\\": \\"ABC123\\",
      \\"authenticationType\\": \\"none\\",
      \\"csrfProtection\\": false
    },
    {
      \\"source\\": \\"^/resources/(.*)$\\",
      \\"target\\": \\"/resources/$1\\",
      \\"authenticationType\\": \\"none\\",
      \\"destination\\": \\"ui5\\"
    },
    {
      \\"source\\": \\"^/test-resources/(.*)$\\",
      \\"target\\": \\"/test-resources/$1\\",
      \\"authenticationType\\": \\"none\\",
      \\"destination\\": \\"ui5\\"
    },
    {
      \\"source\\": \\"^(.*)$\\",
      \\"target\\": \\"$1\\",
      \\"service\\": \\"html5-apps-repo-rt\\",
      \\"authenticationType\\": \\"xsuaa\\"
    }
  ]
}
",
    "state": "modified",
  },
  "xs-security.json": Object {
    "contents": "{
  \\"xsappname\\": \\"comfioritoolslrop\\",
  \\"tenant-mode\\": \\"dedicated\\",
  \\"description\\": \\"Security profile of called application\\",
  \\"scopes\\": [],
  \\"role-templates\\": []
}
",
    "state": "modified",
  },
}
`;

exports[`CF Writer Generate HTML5 App Config Generate deployment configs - HTML5 App with managed approuter attached 2`] = `
"_schema-version: \\"3.2\\"
ID: comfioritoolslrop
description: Generated by Fiori Tools
version: 0.0.1
modules:
- name: comfioritoolslrop-destination-content
  type: com.sap.application.content
  requires:
  - name: comfioritoolslrop-destination-service
    parameters:
      content-target: true
  - name: comfioritoolslrop-repo-host
    parameters:
      service-key:
        name: comfioritoolslrop-repo-host-key
  - name: comfioritoolslrop-uaa
    parameters:
      service-key:
        name: comfioritoolslrop-uaa-key
  parameters:
    content:
      instance:
        destinations:
        - Name: comfioritoolslrop_html_repo_host
          ServiceInstanceName: comfioritoolslrop-html5-service
          ServiceKeyName: comfioritoolslrop-repo-host-key
          sap.cloud.service: comfioritoolslrop
        - Authentication: OAuth2UserTokenExchange
          Name: comfioritoolslrop_uaa
          ServiceInstanceName: comfioritoolslrop-xsuaa-srv
          ServiceKeyName: comfioritoolslrop-uaa-key
          sap.cloud.service: comfioritoolslrop
        existing_destinations_policy: ignore
  build-parameters:
    no-source: true
- name: comfioritoolslrop-app-content
  type: com.sap.application.content
  path: .
  requires:
  - name: comfioritoolslrop-repo-host
    parameters:
      content-target: true
  build-parameters:
    build-result: resources
    requires:
    - artifacts:
      - comfioritoolslrop.zip
      name: comfioritoolslrop
      target-path: resources/
- name: comfioritoolslrop
  type: html5
  path: .
  build-parameters:
    build-result: dist
    builder: custom
    commands:
    - npm install
    - npm run build:cf
    supported-platforms: []
resources:
- name: comfioritoolslrop-destination-service
  type: org.cloudfoundry.managed-service
  parameters:
    config:
      HTML5Runtime_enabled: true
      init_data:
        instance:
          destinations:
          - Authentication: NoAuthentication
            Name: ui5
            ProxyType: Internet
            Type: HTTP
            URL: https://ui5.sap.com
          existing_destinations_policy: update
      version: 1.0.0
    service: destination
    service-name: comfioritoolslrop-destination-service
    service-plan: lite
- name: comfioritoolslrop-uaa
  type: org.cloudfoundry.managed-service
  parameters:
    path: ./xs-security.json
    service: xsuaa
    service-name: comfioritoolslrop-xsuaa-srv
    service-plan: application
- name: comfioritoolslrop-repo-host
  type: org.cloudfoundry.managed-service
  parameters:
    service: html5-apps-repo
    service-name: comfioritoolslrop-html5-service
    service-plan: app-host
parameters:
  deploy_mode: html5-repo
  enable-parallel-deployments: true
"
`;
